[gd_scene load_steps=48 format=2]

[ext_resource path="res://Personaje.gd" type="Script" id=1]
[ext_resource path="res://nave/nave3.png" type="Texture" id=2]
[ext_resource path="res://Meteoro.gd" type="Script" id=3]
[ext_resource path="res://Meteoro2.gd" type="Script" id=4]
[ext_resource path="res://Meteorito3.gd" type="Script" id=5]
[ext_resource path="res://sprite asteoide.png" type="Texture" id=6]
[ext_resource path="res://Meteoro4.gd" type="Script" id=7]
[ext_resource path="res://fondo.jpg" type="Texture" id=8]
[ext_resource path="res://Kenney Pixel.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://main.gd" type="Script" id=10]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://nave/nave4.png" type="Texture" id=12]
[ext_resource path="res://nave/nave2.png" type="Texture" id=13]
[ext_resource path="res://nave/nave.png" type="Texture" id=14]
[ext_resource path="res://diamante.png" type="Texture" id=15]
[ext_resource path="res://sonido_moneda.wav" type="AudioStream" id=16]
[ext_resource path="res://ObjetoPunto.tscn" type="PackedScene" id=17]
[ext_resource path="res://ObjetoPunto.gd" type="Script" id=18]
[ext_resource path="res://Meteoro5.gd" type="Script" id=19]
[ext_resource path="res://Meteoro6.gd" type="Script" id=20]
[ext_resource path="res://Meteoro7.gd" type="Script" id=21]
[ext_resource path="res://Escena final/nivel 2.mp3" type="AudioStream" id=22]
[ext_resource path="res://Escena final/golpe.mp3" type="AudioStream" id=23]
[ext_resource path="res://botones/izquierda.png" type="Texture" id=24]
[ext_resource path="res://botones/derecha.png" type="Texture" id=25]
[ext_resource path="res://botones/arriba.png" type="Texture" id=26]
[ext_resource path="res://botones/abajo.png" type="Texture" id=27]

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "abajo",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "arriba",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "derecha",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "izquierda",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 7.5, 15 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 14, 31.75 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 31.5, 30.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 32, 31.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 31.5, 31.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30.5, 33 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 541, 18.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 510.5, 12.125 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 15.5, 320.25 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=16]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=17]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=19]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=20]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 32.5, 31 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 32.5, 31 )

[node name="main" type="Node2D"]
script = ExtResource( 10 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -9.0
margin_top = 2.0
margin_right = 1029.0
margin_bottom = 602.0
texture = ExtResource( 8 )
expand = true

[node name="Personaje" type="KinematicBody2D" parent="."]
position = Vector2( 514, 321 )
collision_mask = 8166
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="Personaje"]
position = Vector2( 2, 7 )
frames = SubResource( 18 )
animation = "arriba"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personaje"]
position = Vector2( 1.5, 0 )
shape = SubResource( 14 )

[node name="area2D" type="Area2D" parent="Personaje"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personaje/area2D"]
position = Vector2( 2, 7.25 )
shape = SubResource( 15 )

[node name="Sonido Moneda" type="AudioStreamPlayer" parent="Personaje"]
stream = ExtResource( 16 )

[node name="Meteoro5" type="KinematicBody2D" parent="."]
position = Vector2( 800, 0 )
collision_layer = 1024
script = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="Meteoro5"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteoro5"]
position = Vector2( 1.5, 0.5 )
shape = SubResource( 21 )

[node name="Meteoro4" type="KinematicBody2D" parent="."]
position = Vector2( 543, 551 )
collision_layer = 256
collision_mask = 17
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Meteoro4"]
position = Vector2( 0, -1 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteoro4"]
position = Vector2( 0, -2 )
shape = SubResource( 9 )

[node name="Meteoro3" type="KinematicBody2D" parent="."]
position = Vector2( -80, 337 )
collision_layer = 32
collision_mask = 17
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Meteoro3"]
position = Vector2( 128, 188 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteoro3"]
position = Vector2( 128.5, 187.5 )
shape = SubResource( 6 )

[node name="Meteoro2" type="KinematicBody2D" parent="."]
position = Vector2( 927, 301 )
collision_layer = 4
collision_mask = 17
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Meteoro2"]
position = Vector2( 64, 58 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteoro2"]
position = Vector2( 63, 57 )
shape = SubResource( 5 )

[node name="Meteoro" type="KinematicBody2D" parent="."]
position = Vector2( -18, -11 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Meteoro"]
position = Vector2( 64, 58 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteoro"]
position = Vector2( 65.5, 58 )
shape = SubResource( 4 )

[node name="colisionInferior" type="Area2D" parent="."]
position = Vector2( -3, 1 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisionInferior"]
position = Vector2( 506, 669.5 )
shape = SubResource( 3 )

[node name="colisionSuperior" type="Area2D" parent="."]
position = Vector2( 512, -101 )
collision_layer = 16
collision_mask = 292

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisionSuperior"]
position = Vector2( 1, 5 )
shape = SubResource( 3 )

[node name="MuroSuperior" type="StaticBody2D" parent="colisionSuperior/CollisionShape2D"]
position = Vector2( -513, 96 )
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisionSuperior/CollisionShape2D/MuroSuperior"]
position = Vector2( 513, -5 )
shape = SubResource( 7 )

[node name="Muroinferior" type="StaticBody2D" parent="."]
position = Vector2( -2, 624 )
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Muroinferior"]
position = Vector2( 509, -27 )
shape = SubResource( 7 )

[node name="MuroIzquerdo" type="StaticBody2D" parent="."]
position = Vector2( 37, 0 )
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="MuroIzquerdo"]
position = Vector2( -40, 321 )
shape = SubResource( 8 )

[node name="MuroDerecho" type="StaticBody2D" parent="."]
position = Vector2( 1024, 0 )
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="MuroDerecho"]
position = Vector2( 7, 292 )
shape = SubResource( 8 )

[node name="ObjetoPunto" parent="." instance=ExtResource( 17 )]
position = Vector2( 119, 80 )
collision_layer = 512
script = ExtResource( 18 )

[node name="Sprite" parent="ObjetoPunto" index="0"]
position = Vector2( 3, 2 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" parent="ObjetoPunto" index="1"]
position = Vector2( 3, 1 )

[node name="Area2D" parent="ObjetoPunto" index="2"]
position = Vector2( 0, 21 )

[node name="CollisionShape2D" parent="ObjetoPunto/Area2D" index="0"]
position = Vector2( 2, -21 )

[node name="Tiempo" type="Label" parent="."]
margin_left = 797.0
margin_top = 18.0
margin_right = 910.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 10 )
text = "Tiempo:"

[node name="Cronometro" type="Label" parent="."]
margin_left = 959.0
margin_top = 19.0
margin_right = 980.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 11 )
text = "0	"

[node name="GUI" parent="." instance=ExtResource( 11 )]
offset = Vector2( 77, 51 )
transform = Transform2D( 1, 0, 0, 1, 77, 51 )

[node name="Vida" type="Label" parent="."]
margin_left = 797.0
margin_top = 51.0
margin_right = 878.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 12 )
text = "Vida: "

[node name="Tiempo 2" type="Label" parent="."]
margin_left = 925.0
margin_top = 20.0
margin_right = 946.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 16 )
text = "0	"

[node name="Dos puntos" type="Label" parent="."]
margin_left = 949.0
margin_top = 17.0
margin_right = 955.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 17 )
text = ":	"

[node name="Texto Puntos" type="Label" parent="."]
margin_left = 796.0
margin_top = 84.0
margin_right = 912.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 19 )
text = "Puntos:"

[node name="Contador Puntos" type="Label" parent="."]
margin_left = 920.0
margin_top = 85.0
margin_right = 941.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 20 )
text = "0	"

[node name="Meteoro6" type="KinematicBody2D" parent="."]
position = Vector2( 348, 0 )
collision_layer = 2048
script = ExtResource( 20 )

[node name="Sprite" type="Sprite" parent="Meteoro6"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteoro6"]
position = Vector2( 0.5, 0 )
shape = SubResource( 22 )

[node name="Meteoro7" type="KinematicBody2D" parent="."]
position = Vector2( 0, 250 )
collision_layer = 4096
script = ExtResource( 21 )

[node name="Sprite" type="Sprite" parent="Meteoro7"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteoro7"]
position = Vector2( 0.5, 0 )
shape = SubResource( 23 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="golpe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[node name="arrba" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 802, 386 )
scale = Vector2( 0.173524, 0.143113 )
normal = ExtResource( 26 )
action = "ui_up"
visibility_mode = 1

[node name="abajo" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 799, 492 )
scale = Vector2( 0.169947, 0.141324 )
normal = ExtResource( 27 )
action = "ui_down"
visibility_mode = 1

[node name="izquierda" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 70, 440 )
scale = Vector2( 0.175313, 0.139535 )
normal = ExtResource( 24 )
action = "ui_left"
visibility_mode = 1

[node name="derecha" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 200, 439 )
scale = Vector2( 0.191413, 0.146691 )
normal = ExtResource( 25 )
action = "ui_right"
visibility_mode = 1

[connection signal="body_entered" from="Personaje/area2D" to="Personaje" method="_on_area2D_body_entered"]
[connection signal="body_entered" from="Personaje/area2D" to="ObjetoPunto" method="_on_area2D_body_entered"]
[connection signal="body_entered" from="colisionInferior" to="Meteoro" method="_on_Node2D_body_entered"]
[connection signal="body_entered" from="colisionSuperior" to="Meteoro4" method="_on_colisionSuperior_body_entered"]
[connection signal="body_entered" from="colisionSuperior" to="Meteoro3" method="_on_colisionSuperior_body_entered"]
[connection signal="body_entered" from="colisionSuperior" to="Meteoro2" method="_on_colisionSuperior_body_entered"]

[editable path="ObjetoPunto"]
